--- a/install_apache.yml
+++ b/install_apache.yml
@@ -11,6 +11,11 @@
   - name: install apache2 package
     apt: 
       name: apache2
+      state: latest
 
+  - name: php support for apache
+    apt:
+      name: libapache2-mod-php
+      state: latest
       
 
